--- a/_data/theme.yml
+++ b/_data/theme.yml
@@ -1,11 +1,11 @@
+---
 favicon: assets/images/theme/favicon_io/favicon.ico
-header_background_image: assets/images/theme/default-produce.webp
-body_background_image_light:
+header_background_image: assets/images/pozadina.jpg
+body_background_image_light: assets/images/pozadinazuta.jpg
 body_background_image_dark:
 body_background_image_light_default: assets/images/theme/leaves-parallax-light.webp
 body_background_image_dark_default: assets/images/theme/leaves-parallax-dark.webp
 selected_palette: bluish-teal-grey
-
 _schema:
   favicon: image_field
   header_background_image: image_field
